# frizbee

./: .gitignore  BENCHMARKS.md  Cargo.toml  README.md  flake.nix  tables.toml
.github/workflows/: test.yaml
benches/: incremental.rs  lib.rs  prefilter.rs  sort.rs  unicode.rs
benches/data/: download.sh
benches/match_list/: generate.rs  mod.rs
frizbee/: Cargo.toml
frizbee-node/: .gitignore  Cargo.toml  index.cjs  index.d.ts  package-lock.json  package.json
frizbee-node/src/: config.rs  lib.rs
frizbee-python/: .gitignore  Cargo.toml  README.md  pyproject.toml
frizbee-python/frizbee/: __init__.py  __init__.pyi
frizbee-python/src/: binding.rs  lib.rs
frizbee/src/: const.rs  lib.rs
frizbee/src/one_shot/: matcher.rs  parallel.rs
frizbee/src/prefilter/: mod.rs
frizbee/src/prefilter/aarch64/: mod.rs
frizbee/src/prefilter/x86_64/: avx2.rs  sse.rs
frizbee/src/simd/: avx.rs  neon.rs  sse.rs
frizbee/src/smith_waterman/simd/: algo.rs  gaps.rs  mod.rs
fuzz/: README.md
fuzz/corpus/api_equivalence/: basic
fuzz/corpus/long_inputs/: boundary
fuzz/corpus/smith_waterman/: basic
fuzz/corpus/unicode/: basic
fuzz/targets/: api_equivalence.rs  long_inputs.rs  prefilter.rs  smith_waterman.rs  unicode.rs
src/: fuzz_support.rs  incremental.rs  k_merge.rs  lib.rs  pattern.rs  sort.rs
src/incremental/: aligned_string.rs  bucket.rs  bucket_collection.rs  match_.rs  matcher.rs  mod.rs
src/literal/: algo.rs  backend.rs  mod.rs  rank.rs
src/matcher/: algo.rs  backend.rs  iter.rs  mod.rs  multi.rs  parallel.rs
src/one_shot/: bucket.rs  indices.rs  matcher.rs  matcher_v2.rs  mod.rs  parallel.rs
src/one_shot/matcher/: algo.rs  backend.rs  iter.rs  mod.rs
src/one_shot/parallel/: mod.rs  threaded_vec.rs
src/prefilter/: algo.rs  bitmask.rs  mod.rs  scalar.rs
src/prefilter/aarch64/: mod.rs
src/prefilter/algo/: ascii.rs  ascii_typos.rs  load.rs  mod.rs  unicode.rs  unicode_typos.rs
src/prefilter/backend/: avx.rs  avx512.rs  mod.rs  neon.rs  scalar.rs  sse.rs
src/prefilter/x86_64/: avx2.rs  avx512.rs  insensitive.rs  insensitive_typos.rs  mod.rs  sensitive.rs  sensitive_typos.rs  sse.rs
src/prefilter/x86_64/insensitive/: unordered.rs
src/simd/: avx.rs  avx512.rs  mod.rs  neon.rs  neon_256.rs  scalar.rs  scalar_128.rs  scalar_256.rs  sse.rs  sse_256.rs
src/smith_waterman/: algo.rs  alignment.rs  alignment_iter.rs  greedy.rs  matrix.rs  mod.rs
src/smith_waterman/algo/: ascii.rs  ascii_gap.rs  mod.rs  unicode.rs  unicode_gap.rs
src/smith_waterman/backend/: avx.rs  avx512.rs  mod.rs  neon.rs  scalar.rs  sse.rs
src/smith_waterman/backend/tests/: contract.rs  generator.rs  mod.rs  parity.rs
src/smith_waterman/reference/: algorithm.rs  indices.rs  typos.rs
src/smith_waterman/simd/: algo.rs  algorithm.rs  alignment.rs  alignment_iter.rs  gaps.rs  indices.rs  matrix.rs  mod.rs  types.rs  typos.rs
src/smith_waterman/simd/backend/: avx.rs  avx512.rs  mod.rs  neon.rs  scalar.rs  sse.rs
src/smith_waterman/simd/interleave/: generic.rs  mod.rs
src/smith_waterman/v2/: alignment.rs  gaps.rs  mod.rs  ops.rs  typos.rs
src/smith_waterman/x86_64/: mod.rs  ops.rs  typos.rs
src/unicode/: mod.rs
src/unicode/backend/: avx.rs  avx512.rs  mod.rs  scalar.rs
tests/: api_properties.rs
