[package]
name = "frizbee"
description = "Fast typo-resistant fuzzy matching via SIMD smith waterman, similar algorithm to FZF/FZY"
license = "MIT"
version = "0.8.1"
edition = "2024"
repository = "https://github.com/saghen/frizbee"

[profile.release]
lto = true

[dev-dependencies]
criterion = "0.8"
nucleo = "0.5.0"
rand = "0.10"
rand_distr = "0.6"

[[bench]]
name = "lib"
harness = false

[lib]
bench = false

[dependencies]
itertools = "0.14" # k-way merge
raw-cpuid = "11.6" # runtime feature detection
serde = { version = "1.0", features = ["derive"], optional = true }

[features]
serde = ["dep:serde"]
