[package]
name = "frizbee"
description = "Fast typo-resistant fuzzy matching via SIMD smith waterman, similar algorithm to FZF/FZY"
license = "MIT"
version = "0.9.0"
edition = "2024"
repository = "https://github.com/saghen/frizbee"

[profile.release]
lto = true

[profile.fuzz]
inherits = "release"
codegen-units = 1
debug = true

[dev-dependencies]
bolero = "0.13"
criterion = "0.8"
nucleo = "0.5.0"
rand = "0.10"
rand_distr = "0.6"
simdutf = "0.7.0"

[[bench]]
name = "lib"
harness = false

[[bench]]
name = "sort"
harness = false

[[bench]]
name = "unicode"
harness = false
required-features = ["benching"]

[[test]]
name = "fuzz_api_equivalence"
path = "fuzz/targets/api_equivalence.rs"
harness = false
required-features = ["fuzzing"]

[[test]]
name = "fuzz_long_inputs"
path = "fuzz/targets/long_inputs.rs"
harness = false
required-features = ["fuzzing"]

[[test]]
name = "fuzz_prefilter"
path = "fuzz/targets/prefilter.rs"
harness = false
required-features = ["fuzzing"]

[[test]]
name = "fuzz_smith_waterman"
path = "fuzz/targets/smith_waterman.rs"
harness = false
required-features = ["fuzzing"]

[[test]]
name = "fuzz_unicode"
path = "fuzz/targets/unicode.rs"
harness = false
required-features = ["fuzzing"]

[lib]
bench = false

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }

[features]
serde = ["dep:serde"]
benching = []
match_end_col = []
safe_read = []
fuzzing = []
