[package]
name = "frizbee"
description = "Fast typo-resistant fuzzy matching via SIMD smith waterman, similar algorithm to FZF/FZY"
license = "MIT"
version = "0.9.0"
edition = "2024"
repository = "https://github.com/saghen/frizbee"

[profile.release]
lto = true

[dev-dependencies]
criterion = "0.8"
nucleo = "0.5.0"
proptest = "1"
rand = "0.10"
rand_distr = "0.6"

[[bench]]
name = "lib"
harness = false

[[bench]]
name = "sort"
harness = false

[lib]
bench = false

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }

[features]
serde = ["dep:serde"]
match_end_col = []
safe_read = []
