[package]
name = "frizbee"
version = "0.8.2"
edition = "2024"

description = "Fast typo-resistant fuzzy matching via SIMD smith waterman, similar algorithm to FZF/FZY"
repository = "https://github.com/saghen/frizbee"
authors = ["Liam Dyer <liamcdyer@gmail.com>"]
license = "MIT"

[dev-dependencies]
criterion = "0.8"
nucleo = "0.5.0"
rand = "0.10"
rand_distr = "0.6"

[[bench]]
name = "lib"
harness = false

[lib]
bench = false

[dependencies]
itertools = "0.14" # k-way merge
serde = { version = "1.0", features = ["derive"], optional = true }

[target.'cfg(target_arch = "x86_64")'.dependencies]
raw-cpuid = "11.6" # runtime feature detection

[features]
serde = ["dep:serde"]
